# bg3modding_public

./: .gitignore  LICENSE  README.md  ReallyShadowheartV2.ipynb  scanner.ipynb  setup.cfg
example/: ReallyShadowheart_1_3_1_0.ipynb
lsx/: Dialog_ShadowHeart_InParty2_Nested_ShadowheartHug_Empty.lsf.lsx  Timeline_ShadowHeart_InParty2_Nested_ShadowheartHug_Empty.lsf.lsx
lua/ScriptExtender/: Config.json
lua/ScriptExtender/Lua/: BootstrapClient.lua  BootstrapServer.lua
lua/ScriptExtender/Lua/Client/: Overrides.lua
lua/ScriptExtender/Lua/Server/: Overrides.lua  ReallyShadowheartServer.lua
osi/Story/RawFiles/Goals/: GLO_ReallyShadowheart.txt
src/bg3moddinglib/: __init__.py  _common.py  _constants.py  _dialog.py  _dialog_to_html.py  _env.py  _files.py  _flags.py  _game_object_factory.py  _gossips.py  _loca.py  _lsf_dialog.py  _lsf_soundbank.py  _lsf_timeline.py  _reactions.py  _scanner.py  _scene.py  _soundbank.py  _speakers.py  _tags.py  _timeline.py  _timeline_v2.py  _tool.py
src/really_shadowheart/: __init__.py  act1_romance.py  act2_romance.py  act3_romance.py  banters.py  betrayal_reactions.py  bhaal_temple.py  books.py  breakup_line.py  build.py  cloister.py  conversations.py  creepy_druid.py  end_game_epilogue_married.py  end_game_marriage_proposal.py  flags.py  greetings.py  gur_putrid_bog.py  hug_animations.py  initalization.py  kiss_animations.py  long_rest.py  minthara.py  mizora_aftermath.py  more_kisses.py  relationship.py  sharess_caress.py  skinny_dipping.py  soundbank.py  text_content.py  wylls_good_manners.py
src/really_shadowheart/context/: __init__.py  context.py
test/: fixtures.py  test_bg3_game_object_dialog.py  test_bg3_loca_object.py
test/resources/: test.pak
(+6 files in other folders)
