[metadata]
name = b3moddinglib
version = 1.0.1.0
author = Stanislav Morozov
author_email = morozov.stas@gmail.com
description = Baldurs Gate 3 modding library
long_description = file: README.md
keywords = bg3, baldur, baldurs, gate, mod, modding
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    requests >= 2.32.3
    click >= 8.1.7

[tool:pytest]
testpaths =
    test