[metadata]
name = b3moddinglib
version = 1.0.1.0
author = iamy0urdad
author_email = 0x1amy0urdad@gmail.com
description = Baldurs Gate 3 modding library
long_description = file: README.md
keywords = bg3, baldur, baldurs, gate, mod, modding
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    requests >= 2.32.3
    click >= 8.1.7
    numpy >= 2.1.3

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    test