[metadata]
name = really_shadowheart
version = 1.4.7.0
author = iamy0urdad
author_email = 0x1amy0urdad@gmail.com
description = Really Shadowheart
keywords = bg3, baldur, baldurs, gate, mod, modding
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    b3moddinglib >= 1.0.1.0

[options.packages.find]
where = src
